[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/3d_widgets/gdscript/mouse_plane/mouse_plane_control.gd" type="Script" id=1]
[ext_resource path="res://addons/3d_widgets/gdscript/collision_object_input.gd" type="Script" id=2]
[ext_resource path="res://addons/3d_widgets/gdscript/block_selection.gd" type="Script" id=3]
[ext_resource path="res://addons/3d_widgets/scenes/instanced/rotate_plane_widget.gd" type="Script" id=4]
[ext_resource path="res://meshes/gizmos/rotate.obj" type="ArrayMesh" id=5]
[ext_resource path="res://addons/3d_widgets/gdscript/object_projector.gd" type="Script" id=6]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( 3, 0, 0, 2.3097, 0.5, 0.9567, 2.5, 0.5, 0, 2.7716, 0, 1.1481, 2.3097, 0.5, 0.9567, 3, 0, 0, 2.5, 0.5, 0, 1.8478, 0, 0.7654, 2, 0, 0, 2.3097, 0.5, 0.9567, 1.8478, 0, 0.7654, 2.5, 0.5, 0, 2, 0, 0, 2.3097, -0.5, 0.9567, 2.5, -0.5, 0, 1.8478, 0, 0.7654, 2.3097, -0.5, 0.9567, 2, 0, 0, 2.5, -0.5, 0, 2.7716, 0, 1.1481, 3, 0, 0, 2.3097, -0.5, 0.9567, 2.7716, 0, 1.1481, 2.5, -0.5, 0, 2.7716, 0, 1.1481, 1.7678, 0.5, 1.7678, 2.3097, 0.5, 0.9567, 2.1213, 0, 2.1213, 1.7678, 0.5, 1.7678, 2.7716, 0, 1.1481, 2.3097, 0.5, 0.9567, 1.4142, 0, 1.4142, 1.8478, 0, 0.7654, 1.7678, 0.5, 1.7678, 1.4142, 0, 1.4142, 2.3097, 0.5, 0.9567, 1.8478, 0, 0.7654, 1.7678, -0.5, 1.7678, 2.3097, -0.5, 0.9567, 1.4142, 0, 1.4142, 1.7678, -0.5, 1.7678, 1.8478, 0, 0.7654, 2.3097, -0.5, 0.9567, 2.1213, 0, 2.1213, 2.7716, 0, 1.1481, 1.7678, -0.5, 1.7678, 2.1213, 0, 2.1213, 2.3097, -0.5, 0.9567, 2.1213, 0, 2.1213, 0.9567, 0.5, 2.3097, 1.7678, 0.5, 1.7678, 1.1481, 0, 2.7716, 0.9567, 0.5, 2.3097, 2.1213, 0, 2.1213, 1.7678, 0.5, 1.7678, 0.7654, 0, 1.8478, 1.4142, 0, 1.4142, 0.9567, 0.5, 2.3097, 0.7654, 0, 1.8478, 1.7678, 0.5, 1.7678, 1.4142, 0, 1.4142, 0.9567, -0.5, 2.3097, 1.7678, -0.5, 1.7678, 0.7654, 0, 1.8478, 0.9567, -0.5, 2.3097, 1.4142, 0, 1.4142, 1.7678, -0.5, 1.7678, 1.1481, 0, 2.7716, 2.1213, 0, 2.1213, 0.9567, -0.5, 2.3097, 1.1481, 0, 2.7716, 1.7678, -0.5, 1.7678, 1.1481, 0, 2.7716, 0, 0.5, 2.5, 0.9567, 0.5, 2.3097, 0, 0, 3, 0, 0.5, 2.5, 1.1481, 0, 2.7716, 0.9567, 0.5, 2.3097, 0, 0, 2, 0.7654, 0, 1.8478, 0, 0.5, 2.5, 0, 0, 2, 0.9567, 0.5, 2.3097, 0.7654, 0, 1.8478, 0, -0.5, 2.5, 0.9567, -0.5, 2.3097, 0, 0, 2, 0, -0.5, 2.5, 0.7654, 0, 1.8478, 0.9567, -0.5, 2.3097, 0, 0, 3, 1.1481, 0, 2.7716, 0, -0.5, 2.5, 0, 0, 3, 0.9567, -0.5, 2.3097, 0, 0, 3, -0.9567, 0.5, 2.3097, 0, 0.5, 2.5, -1.1481, 0, 2.7716, -0.9567, 0.5, 2.3097, 0, 0, 3, 0, 0.5, 2.5, -0.7654, 0, 1.8478, 0, 0, 2, -0.9567, 0.5, 2.3097, -0.7654, 0, 1.8478, 0, 0.5, 2.5, 0, 0, 2, -0.9567, -0.5, 2.3097, 0, -0.5, 2.5, -0.7654, 0, 1.8478, -0.9567, -0.5, 2.3097, 0, 0, 2, 0, -0.5, 2.5, -1.1481, 0, 2.7716, 0, 0, 3, -0.9567, -0.5, 2.3097, -1.1481, 0, 2.7716, 0, -0.5, 2.5, -1.1481, 0, 2.7716, -1.7678, 0.5, 1.7678, -0.9567, 0.5, 2.3097, -2.1213, 0, 2.1213, -1.7678, 0.5, 1.7678, -1.1481, 0, 2.7716, -0.9567, 0.5, 2.3097, -1.4142, 0, 1.4142, -0.7654, 0, 1.8478, -1.7678, 0.5, 1.7678, -1.4142, 0, 1.4142, -0.9567, 0.5, 2.3097, -0.7654, 0, 1.8478, -1.7678, -0.5, 1.7678, -0.9567, -0.5, 2.3097, -1.4142, 0, 1.4142, -1.7678, -0.5, 1.7678, -0.7654, 0, 1.8478, -0.9567, -0.5, 2.3097, -2.1213, 0, 2.1213, -1.1481, 0, 2.7716, -1.7678, -0.5, 1.7678, -2.1213, 0, 2.1213, -0.9567, -0.5, 2.3097, -2.1213, 0, 2.1213, -2.3097, 0.5, 0.9567, -1.7678, 0.5, 1.7678, -2.7716, 0, 1.1481, -2.3097, 0.5, 0.9567, -2.1213, 0, 2.1213, -1.7678, 0.5, 1.7678, -1.8478, 0, 0.7654, -1.4142, 0, 1.4142, -2.3097, 0.5, 0.9567, -1.8478, 0, 0.7654, -1.7678, 0.5, 1.7678, -1.4142, 0, 1.4142, -2.3097, -0.5, 0.9567, -1.7678, -0.5, 1.7678, -1.8478, 0, 0.7654, -2.3097, -0.5, 0.9567, -1.4142, 0, 1.4142, -1.7678, -0.5, 1.7678, -2.7716, 0, 1.1481, -2.1213, 0, 2.1213, -2.3097, -0.5, 0.9567, -2.7716, 0, 1.1481, -1.7678, -0.5, 1.7678, -2.7716, 0, 1.1481, -2.5, 0.5, 0, -2.3097, 0.5, 0.9567, -3, 0, 0, -2.5, 0.5, 0, -2.7716, 0, 1.1481, -2.3097, 0.5, 0.9567, -2, 0, 0, -1.8478, 0, 0.7654, -2.5, 0.5, 0, -2, 0, 0, -2.3097, 0.5, 0.9567, -1.8478, 0, 0.7654, -2.5, -0.5, 0, -2.3097, -0.5, 0.9567, -2, 0, 0, -2.5, -0.5, 0, -1.8478, 0, 0.7654, -2.3097, -0.5, 0.9567, -3, 0, 0, -2.7716, 0, 1.1481, -2.5, -0.5, 0, -3, 0, 0, -2.3097, -0.5, 0.9567, -3, 0, 0, -2.3097, 0.5, -0.9567, -2.5, 0.5, 0, -2.7716, 0, -1.1481, -2.3097, 0.5, -0.9567, -3, 0, 0, -2.5, 0.5, 0, -1.8478, 0, -0.7654, -2, 0, 0, -2.3097, 0.5, -0.9567, -1.8478, 0, -0.7654, -2.5, 0.5, 0, -2, 0, 0, -2.3097, -0.5, -0.9567, -2.5, -0.5, 0, -1.8478, 0, -0.7654, -2.3097, -0.5, -0.9567, -2, 0, 0, -2.5, -0.5, 0, -2.7716, 0, -1.1481, -3, 0, 0, -2.3097, -0.5, -0.9567, -2.7716, 0, -1.1481, -2.5, -0.5, 0, -2.7716, 0, -1.1481, -1.7678, 0.5, -1.7678, -2.3097, 0.5, -0.9567, -2.1213, 0, -2.1213, -1.7678, 0.5, -1.7678, -2.7716, 0, -1.1481, -2.3097, 0.5, -0.9567, -1.4142, 0, -1.4142, -1.8478, 0, -0.7654, -1.7678, 0.5, -1.7678, -1.4142, 0, -1.4142, -2.3097, 0.5, -0.9567, -1.8478, 0, -0.7654, -1.7678, -0.5, -1.7678, -2.3097, -0.5, -0.9567, -1.4142, 0, -1.4142, -1.7678, -0.5, -1.7678, -1.8478, 0, -0.7654, -2.3097, -0.5, -0.9567, -2.1213, 0, -2.1213, -2.7716, 0, -1.1481, -1.7678, -0.5, -1.7678, -2.1213, 0, -2.1213, -2.3097, -0.5, -0.9567, -2.1213, 0, -2.1213, -0.9567, 0.5, -2.3097, -1.7678, 0.5, -1.7678, -1.1481, 0, -2.7716, -0.9567, 0.5, -2.3097, -2.1213, 0, -2.1213, -1.7678, 0.5, -1.7678, -0.7654, 0, -1.8478, -1.4142, 0, -1.4142, -0.9567, 0.5, -2.3097, -0.7654, 0, -1.8478, -1.7678, 0.5, -1.7678, -1.4142, 0, -1.4142, -0.9567, -0.5, -2.3097, -1.7678, -0.5, -1.7678, -0.7654, 0, -1.8478, -0.9567, -0.5, -2.3097, -1.4142, 0, -1.4142, -1.7678, -0.5, -1.7678, -1.1481, 0, -2.7716, -2.1213, 0, -2.1213, -0.9567, -0.5, -2.3097, -1.1481, 0, -2.7716, -1.7678, -0.5, -1.7678, -1.1481, 0, -2.7716, 0, 0.5, -2.5, -0.9567, 0.5, -2.3097, 0, 0, -3, 0, 0.5, -2.5, -1.1481, 0, -2.7716, -0.9567, 0.5, -2.3097, 0, 0, -2, -0.7654, 0, -1.8478, 0, 0.5, -2.5, 0, 0, -2, -0.9567, 0.5, -2.3097, -0.7654, 0, -1.8478, 0, -0.5, -2.5, -0.9567, -0.5, -2.3097, 0, 0, -2, 0, -0.5, -2.5, -0.7654, 0, -1.8478, -0.9567, -0.5, -2.3097, 0, 0, -3, -1.1481, 0, -2.7716, 0, -0.5, -2.5, 0, 0, -3, -0.9567, -0.5, -2.3097, 0, 0, -3, 0.9567, 0.5, -2.3097, 0, 0.5, -2.5, 1.1481, 0, -2.7716, 0.9567, 0.5, -2.3097, 0, 0, -3, 0, 0.5, -2.5, 0.7654, 0, -1.8478, 0, 0, -2, 0.9567, 0.5, -2.3097, 0.7654, 0, -1.8478, 0, 0.5, -2.5, 0, 0, -2, 0.9567, -0.5, -2.3097, 0, -0.5, -2.5, 0.7654, 0, -1.8478, 0.9567, -0.5, -2.3097, 0, 0, -2, 0, -0.5, -2.5, 1.1481, 0, -2.7716, 0, 0, -3, 0.9567, -0.5, -2.3097, 1.1481, 0, -2.7716, 0, -0.5, -2.5, 1.1481, 0, -2.7716, 1.7678, 0.5, -1.7678, 0.9567, 0.5, -2.3097, 2.1213, 0, -2.1213, 1.7678, 0.5, -1.7678, 1.1481, 0, -2.7716, 0.9567, 0.5, -2.3097, 1.4142, 0, -1.4142, 0.7654, 0, -1.8478, 1.7678, 0.5, -1.7678, 1.4142, 0, -1.4142, 0.9567, 0.5, -2.3097, 0.7654, 0, -1.8478, 1.7678, -0.5, -1.7678, 0.9567, -0.5, -2.3097, 1.4142, 0, -1.4142, 1.7678, -0.5, -1.7678, 0.7654, 0, -1.8478, 0.9567, -0.5, -2.3097, 2.1213, 0, -2.1213, 1.1481, 0, -2.7716, 1.7678, -0.5, -1.7678, 2.1213, 0, -2.1213, 0.9567, -0.5, -2.3097, 2.1213, 0, -2.1213, 2.3097, 0.5, -0.9567, 1.7678, 0.5, -1.7678, 2.7716, 0, -1.1481, 2.3097, 0.5, -0.9567, 2.1213, 0, -2.1213, 1.7678, 0.5, -1.7678, 1.8478, 0, -0.7654, 1.4142, 0, -1.4142, 2.3097, 0.5, -0.9567, 1.8478, 0, -0.7654, 1.7678, 0.5, -1.7678, 1.4142, 0, -1.4142, 2.3097, -0.5, -0.9567, 1.7678, -0.5, -1.7678, 1.8478, 0, -0.7654, 2.3097, -0.5, -0.9567, 1.4142, 0, -1.4142, 1.7678, -0.5, -1.7678, 2.7716, 0, -1.1481, 2.1213, 0, -2.1213, 2.3097, -0.5, -0.9567, 2.7716, 0, -1.1481, 1.7678, -0.5, -1.7678, 2.7716, 0, -1.1481, 2.5, 0.5, 0, 2.3097, 0.5, -0.9567, 3, 0, 0, 2.5, 0.5, 0, 2.7716, 0, -1.1481, 2.3097, 0.5, -0.9567, 2, 0, 0, 1.8478, 0, -0.7654, 2.5, 0.5, 0, 2, 0, 0, 2.3097, 0.5, -0.9567, 1.8478, 0, -0.7654, 2.5, -0.5, 0, 2.3097, -0.5, -0.9567, 2, 0, 0, 2.5, -0.5, 0, 1.8478, 0, -0.7654, 2.3097, -0.5, -0.9567, 3, 0, 0, 2.7716, 0, -1.1481, 2.5, -0.5, 0, 3, 0, 0, 2.3097, -0.5, -0.9567 )

[sub_resource type="SpatialMaterial" id=2]
render_priority = 1
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 0.501961 )

[sub_resource type="SpatialMaterial" id=3]
render_priority = 1
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 1, 0, 0.501961 )

[sub_resource type="SpatialMaterial" id=4]
render_priority = 1
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 0, 1, 0.501961 )

[node name="RotatePlaneWidget" type="Spatial"]
script = ExtResource( 4 )

[node name="ObjectProjectorX" type="Spatial" parent="."]
script = ExtResource( 6 )
target = NodePath("../AxisX")
apply_depth = false

[node name="AxisX" type="RigidBody" parent="."]
collision_layer = 2
collision_mask = 2
mode = 1
custom_integrator = true

[node name="CollisionShape" type="CollisionShape" parent="AxisX"]
transform = Transform( -2.44382e-07, 1.5, 0, -1.5, -2.44382e-07, 0, 0, 0, 1.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="AxisX/CollisionShape"]
transform = Transform( 1, -1.19209e-07, 0, 1.19209e-07, 1, 0, 0, 0, 1, 0, 0, 0 )
material_override = SubResource( 2 )
mesh = ExtResource( 5 )
material/0 = null

[node name="CollisionObjectInput" type="Node" parent="AxisX"]
script = ExtResource( 2 )

[node name="MousePlaneControl" type="Node" parent="AxisX"]
script = ExtResource( 1 )
custom_basis = Basis( 0, 0, 1, 0, 1, 0, 1, 0, 0 )

[node name="BlockSelection" type="Node" parent="AxisX"]
script = ExtResource( 3 )

[node name="ObjectProjectorY" type="Spatial" parent="."]
script = ExtResource( 6 )
target = NodePath("../AxisY")
apply_depth = false

[node name="AxisY" type="RigidBody" parent="."]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
collision_layer = 2
collision_mask = 2
mode = 1
custom_integrator = true

[node name="CollisionShape" type="CollisionShape" parent="AxisY"]
transform = Transform( -2.44382e-07, 1.5, 0, -1.5, -2.44382e-07, 0, 0, 0, 1.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="AxisY/CollisionShape"]
transform = Transform( 1, -1.19209e-07, 0, 1.19209e-07, 1, 0, 0, 0, 1, 0, 0, 0 )
material_override = SubResource( 3 )
mesh = ExtResource( 5 )
material/0 = null

[node name="CollisionObjectInput" type="Node" parent="AxisY"]
script = ExtResource( 2 )

[node name="MousePlaneControl" type="Node" parent="AxisY"]
script = ExtResource( 1 )
custom_basis = Basis( 1, 0, 0, 0, 0, 1, 0, 1, 0 )

[node name="BlockSelection" type="Node" parent="AxisY"]
script = ExtResource( 3 )

[node name="ObjectProjectorZ" type="Spatial" parent="."]
script = ExtResource( 6 )
target = NodePath("../AxisZ")
apply_depth = false

[node name="AxisZ" type="RigidBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 2
collision_mask = 2
mode = 1
custom_integrator = true

[node name="CollisionShape" type="CollisionShape" parent="AxisZ"]
transform = Transform( -2.44382e-07, 1.5, 0, -1.5, -2.44382e-07, 0, 0, 0, 1.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="AxisZ/CollisionShape"]
transform = Transform( 1, -1.19209e-07, 0, 1.19209e-07, 1, 0, 0, 0, 1, 0, 0, 0 )
material_override = SubResource( 4 )
mesh = ExtResource( 5 )
material/0 = null

[node name="CollisionObjectInput" type="Node" parent="AxisZ"]
script = ExtResource( 2 )

[node name="MousePlaneControl" type="Node" parent="AxisZ"]
script = ExtResource( 1 )

[node name="BlockSelection" type="Node" parent="AxisZ"]
script = ExtResource( 3 )
